# actantial

./: .gitignore  404.html  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test_quantisation.py
.github/workflows/: deploy-docs.yml  publish.yml
actantial/: __init__.py  __main__.py  cli.py  config.py  data.py  data_tools.py  extract.py  io.py  runner.py  template_utils.py  utils.py  validation.py
actantial/backends/: __init__.py  anthropic.py  base.py  huggingface.py  openai.py
actantial/data/: sample_news_articles.csv  test_labels.yaml
actantial/templates/DeepSeek-R1-Distill-Qwen-32B/: prompt_closed.txt  prompt_open.txt  prompt_open_1.1.txt  prompt_open_1.txt
actantial/templates/default/: base_prompt.txt
actantial/templates/gemma-3-1b-it/: prompt_open.txt
actantial/templates/gpt-4o-mini/: prompt_closed.txt  prompt_open_1.txt  prompt_open_variables.txt
background/: index.html
data/: sample_alshifa_news.csv  sample_youtube_comments.csv
docs/: background.md  index.md
docs/examples/: case_study.ipynb  examples.ipynb  getting_started.ipynb  index.md
docs/reference/: cli.md  extract.md  io.md  runner.md  validation.md
docs/reference/backends/: anthropic.md  base.md  huggingface.md  openai.md
examples/: case_study.ipynb  example_api.sh  example_gpu.sh  examples.ipynb  getting_started.ipynb  index.html
examples/case_study/: index.html
examples/data/: sample_actors.yaml  sample_news_articles.csv  sample_objects.yaml  sample_youtube_annotator1.csv  sample_youtube_annotator2.csv  sample_youtube_comments.csv
examples/examples/: index.html
examples/getting_started/: index.html
examples/output/actantial_models/DeepSeek-R1-Distill-Qwen-32B/prompt_closed/20250516_141927/: Ugw-Du1Weq16IHebwAd4AaABAg.txt  Ugw-sUI5x9MNJwBdvsh4AaABAg.txt  Ugw1dFyn-RvtwqeBHWx4AaABAg.txt  Ugw1zz86FNkrkNYmJTB4AaABAg.txt  Ugw8GMStXf7PiDcycG14AaABAg.txt  UgwA82hLCvYZ4FljZFl4AaABAg.txt  UgwDYMPkTyt4W6MQHi94AaABAg.txt  UgwF9VPoUSe0kEyEyYh4AaABAg.txt  UgwJnk8v7lR48zg3j_54AaABAg.txt  UgwSTkdV79kr5nO40md4AaABAg.txt  UgwTVul-1iwHNtpItVV4AaABAg.txt  UgwU0tuxWhaFA-COYVZ4AaABAg.txt  UgwW2-4LfwxfBk1b-Sl4AaABAg.txt  UgwWnOtpq9g6x34Xa3J4AaABAg.txt  UgwawgDUo7vYbfus_zJ4AaABAg.txt  UgwbcwcxVq8WW6ym6o94AaABAg.txt  UgwbyB7QTCXrZm-27R94AaABAg.txt  UgweT0nTwT0_0flCGfx4AaABAg.txt  UgweTpCyVwuEHQDRrb54AaABAg.txt  Ugwgbvu3vUa5ZZ7DiI54AaABAg.txt  UgwhcTY6ZOb9kDHcem94AaABAg.txt  UgwhvmC1zJbcIQ1r2YJ4AaABAg.txt  UgwkmASL-2d6Mc4cD094AaABAg.txt  Ugwm0T3qJE7yo2l-XxZ4AaABAg.txt  Ugwnlr9U6KYpML0s-814AaABAg.txt  UgwrX2UulqE1YcHwbhF4AaABAg.txt  UgwrlR4Btzfyt7iCPZ94AaABAg.txt  UgwsR3fq8FK6lG3x82x4AaABAg.txt  Ugwtz8GFQI2lsKuJZfZ4AaABAg.txt  UgwxJGBNJt8BhfTBGxF4AaABAg.txt  Ugx6tFNNWjxpA69UocB4AaABAg.txt  UgxA3ehEXLHIXhLP3sl4AaABAg.txt  UgxDvHFjqgyZ_hEA5zN4AaABAg.txt  (+262 more)
reference/backends/anthropic/: index.html
reference/backends/base/: index.html
reference/backends/huggingface/: index.html
reference/backends/openai/: index.html
reference/cli/: index.html
reference/extract/: index.html
reference/io/: index.html
reference/runner/: index.html
reference/validation/: index.html
search/: search_index.json
test_data/: test_data.csv
tests/: test_backends_integration.py  test_io.py  test_validation.py
(+1629 files in other folders)
