[project]
name = "actantial"
version = "0.1.0"
description = "A toolkit for analyzing narratives using Greimas' Actantial Model."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name="Jan Elfes", email="janelfes@gmail.com" }
]

dependencies = [
  "Jinja2>=3.1.6",
  "pandas>=2.3.3",
  "torch>=2.4.0",                 # TODO maybe move to huggingface optionals
]

[project.optional-dependencies]
huggingface = [
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
  # "bitsandbytes>=0.42.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
