[project]
name = "actantial"
version = "0.1.0"
description = "A toolkit for analyzing narratives using Greimas' Actantial Model."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name="Jan Elfes", email="janelfes@gmail.com" }
]

dependencies = [
  "Jinja2>=3.1.6",
  "pandas>=2.3.3",
  "krippendorff>=0.8.2",
  "matplotlib>=3.10.8",
  "torch>=2.4.0",                 # TODO maybe move to huggingface optionals
]

[project.optional-dependencies]
huggingface = [
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
  # "bitsandbytes>=0.42.0",
]

anthropic = [
  "anthropic>=0.76.0",
  "python-dotenv>=1.2.1",
]

openai = [
  "openai>=2.15.0",
  "python-dotenv>=1.2.1",
]

[project.scripts]
actantial = "actantial.cli:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["actantial"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "api: tests that make real API calls (require ANTHROPIC_API_KEY / OPENAI_API_KEY)",
    "gpu: tests that load a HuggingFace model (require a GPU and sufficient VRAM)",
    "integration: all tests that require external resources (api + gpu)",
]

